Fixes on MergeInstruction